nginx: add utf-8 charset, add gzip types

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -12,6 +12,7 @@ server {
     listen       80;
     server_name  localhost;
 
+    charset utf-8;
     server_tokens off;
 
     #Security Headers
@@ -37,7 +38,7 @@ server {
     gzip_comp_level 6;
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss image/svg+xml text/javascript;
 
     rewrite ^/governance/governance/?$                                   $scheme://$http_host/governance/introduction-to-decred-governance permanent;
     rewrite ^/governance/politeia/?$                                     $scheme://$http_host/governance/politeia/politeia permanent;
